// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col rounded-2xl shadow-lg bg-gray-50"
        data-testid="udp-info-card"
      >
        <div
          class="rounded-t-2xl flex flex-col p-6 gap-2 text-center items-center bg-white"
        >
          <div
            class="p-4 rounded-2xl bg-gradient-to-b from-primary-400 to-primary-700"
          >
            <svg
              aria-hidden="true"
              class="size-8 text-white"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
              />
              <path
                d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-4 items-center whitespace-pre-line"
          >
            <h2
              class="font-bold text-xl"
            >
              Dashboards der Stadt Gütersloh
            </h2>
            <p
              class="text-gray-800"
            >
              Hier finden Sie Dashboards der Stadt Gütersloh.
            </p>
          </div>
        </div>
        <div
          class="flex flex-col flex-1 py-6 px-3 pb-4 rounded-b-2xl bg-gray-50 min-h-60 justify-between"
          data-testid="udp-info-card-items"
        >
          <div
            class="flex flex-col gap-3 pb-4"
          >
            <a
              class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
              href="/first"
            >
              <svg
                aria-hidden="true"
                class="size-5 text-primary-700"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
                />
                <path
                  d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
                />
              </svg>
              Stadt Gesundheit
            </a>
            <a
              class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
              href="/second"
            >
              <svg
                aria-hidden="true"
                class="size-5 text-primary-700"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
                />
                <path
                  d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
                />
              </svg>
              Umwelt
            </a>
            <a
              class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
              href="/third"
            >
              <svg
                aria-hidden="true"
                class="size-5 text-primary-700"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
                />
                <path
                  d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
                />
              </svg>
              Verkehr
            </a>
          </div>
          <a
            class="text-primary-700 min-h-6 p-1 hover:underline
          focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            data-testid="udp-info-card-link"
            href="/link"
          >
            Alle Dashboards ansehen
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col rounded-2xl shadow-lg bg-gray-50"
      data-testid="udp-info-card"
    >
      <div
        class="rounded-t-2xl flex flex-col p-6 gap-2 text-center items-center bg-white"
      >
        <div
          class="p-4 rounded-2xl bg-gradient-to-b from-primary-400 to-primary-700"
        >
          <svg
            aria-hidden="true"
            class="size-8 text-white"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
            />
            <path
              d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
            />
          </svg>
        </div>
        <div
          class="flex flex-col gap-4 items-center whitespace-pre-line"
        >
          <h2
            class="font-bold text-xl"
          >
            Dashboards der Stadt Gütersloh
          </h2>
          <p
            class="text-gray-800"
          >
            Hier finden Sie Dashboards der Stadt Gütersloh.
          </p>
        </div>
      </div>
      <div
        class="flex flex-col flex-1 py-6 px-3 pb-4 rounded-b-2xl bg-gray-50 min-h-60 justify-between"
        data-testid="udp-info-card-items"
      >
        <div
          class="flex flex-col gap-3 pb-4"
        >
          <a
            class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/first"
          >
            <svg
              aria-hidden="true"
              class="size-5 text-primary-700"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
              />
              <path
                d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
              />
            </svg>
            Stadt Gesundheit
          </a>
          <a
            class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/second"
          >
            <svg
              aria-hidden="true"
              class="size-5 text-primary-700"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
              />
              <path
                d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
              />
            </svg>
            Umwelt
          </a>
          <a
            class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/third"
          >
            <svg
              aria-hidden="true"
              class="size-5 text-primary-700"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
              />
              <path
                d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
              />
            </svg>
            Verkehr
          </a>
        </div>
        <a
          class="text-primary-700 min-h-6 p-1 hover:underline
          focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          data-testid="udp-info-card-link"
          href="/link"
        >
          Alle Dashboards ansehen
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshots > matches snapshot with custom class 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col rounded-2xl shadow-lg bg-gray-50 border-2 border-cyan-500"
        data-testid="udp-info-card"
      >
        <div
          class="rounded-t-2xl flex flex-col p-6 gap-2 text-center items-center bg-white"
        >
          <div
            class="p-4 rounded-2xl bg-gradient-to-b from-primary-400 to-primary-700"
          >
            <svg
              aria-hidden="true"
              class="size-8 text-white"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
              />
              <path
                d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-4 items-center whitespace-pre-line"
          >
            <h2
              class="font-bold text-xl"
            >
              Dashboards der Stadt Gütersloh
            </h2>
            <p
              class="text-gray-800"
            >
              Hier finden Sie Dashboards der Stadt Gütersloh.
            </p>
          </div>
        </div>
        <div
          class="flex flex-col flex-1 py-6 px-3 pb-4 rounded-b-2xl bg-gray-50 min-h-60 justify-between"
          data-testid="udp-info-card-items"
        >
          <div
            class="flex flex-col gap-3 pb-4"
          >
            <a
              class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
              href="/first"
            >
              <svg
                aria-hidden="true"
                class="size-5 text-primary-700"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
                />
                <path
                  d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
                />
              </svg>
              Stadt Gesundheit
            </a>
            <a
              class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
              href="/second"
            >
              <svg
                aria-hidden="true"
                class="size-5 text-primary-700"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
                />
                <path
                  d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
                />
              </svg>
              Umwelt
            </a>
            <a
              class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
              href="/third"
            >
              <svg
                aria-hidden="true"
                class="size-5 text-primary-700"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
                />
                <path
                  d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
                />
              </svg>
              Verkehr
            </a>
          </div>
          <a
            class="text-primary-700 min-h-6 p-1 hover:underline
          focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            data-testid="udp-info-card-link"
            href="/link"
          >
            Alle Dashboards ansehen
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col rounded-2xl shadow-lg bg-gray-50 border-2 border-cyan-500"
      data-testid="udp-info-card"
    >
      <div
        class="rounded-t-2xl flex flex-col p-6 gap-2 text-center items-center bg-white"
      >
        <div
          class="p-4 rounded-2xl bg-gradient-to-b from-primary-400 to-primary-700"
        >
          <svg
            aria-hidden="true"
            class="size-8 text-white"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
            />
            <path
              d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
            />
          </svg>
        </div>
        <div
          class="flex flex-col gap-4 items-center whitespace-pre-line"
        >
          <h2
            class="font-bold text-xl"
          >
            Dashboards der Stadt Gütersloh
          </h2>
          <p
            class="text-gray-800"
          >
            Hier finden Sie Dashboards der Stadt Gütersloh.
          </p>
        </div>
      </div>
      <div
        class="flex flex-col flex-1 py-6 px-3 pb-4 rounded-b-2xl bg-gray-50 min-h-60 justify-between"
        data-testid="udp-info-card-items"
      >
        <div
          class="flex flex-col gap-3 pb-4"
        >
          <a
            class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/first"
          >
            <svg
              aria-hidden="true"
              class="size-5 text-primary-700"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
              />
              <path
                d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
              />
            </svg>
            Stadt Gesundheit
          </a>
          <a
            class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/second"
          >
            <svg
              aria-hidden="true"
              class="size-5 text-primary-700"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
              />
              <path
                d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
              />
            </svg>
            Umwelt
          </a>
          <a
            class="flex flex-row items-center gap-3 pl-3 py-3 hover:bg-gray-100 rounded-xl
              focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
            href="/third"
          >
            <svg
              aria-hidden="true"
              class="size-5 text-primary-700"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.5 2c-.178 0-.356.013-.492.022l-.074.005a1 1 0 0 0-.934.998V11a1 1 0 0 0 1 1h7.975a1 1 0 0 0 .998-.934l.005-.074A7.04 7.04 0 0 0 22 10.5 8.5 8.5 0 0 0 13.5 2Z"
              />
              <path
                d="M11 6.025a1 1 0 0 0-1.065-.998 8.5 8.5 0 1 0 9.038 9.039A1 1 0 0 0 17.975 13H11V6.025Z"
              />
            </svg>
            Verkehr
          </a>
        </div>
        <a
          class="text-primary-700 min-h-6 p-1 hover:underline
          focus:rounded-md focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          data-testid="udp-info-card-link"
          href="/link"
        >
          Alle Dashboards ansehen
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
